--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div class="game">
-      <canvas id="canvas"></canvas>
+      <canvas id="canvas" width="400" height="400"></canvas>
     </div>
     <script src="js/index.js" type="module"></script>
   </body>
