--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <div class="game">
-
+      <div class="timer" id="timer">
+        00:00:00
+      </div>
       <div class="menu" id="options">
         <div class="menu__title">Options</div>
         <div class="menu__panel">
