Add lovely footer

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   </head>
   <body>
     <div class="game">
+
       <div class="timer" id="timer">
         00:00:00
       </div>
+
       <div class="menu" id="options">
         <div class="menu__title">Options</div>
         <div class="menu__panel">
@@ -39,6 +41,10 @@
         <div class="menu__footer">
           <button class="menu__button" id="button__hideResult">Ok</button>
         </div>
+      </div>
+
+      <div class="footer">
+          Made with ❤ by Karol Świerczek
       </div>
 
       <canvas id="canvas" width="600" height="600"></canvas>
